<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_battle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.asus.lism1.activity.BattleActivity">
    <LinearLayout
        android:id="@+id/ly_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/bg_white"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/fanchang"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/tab_menu_bg"
            android:drawablePadding="3dp"

            android:gravity="center"
            android:padding="5dp"
            android:text="@string/tab_menu_fanchang"
            android:textColor="@drawable/tab_menu_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/battle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.97"
            android:background="@drawable/tab_menu_bg"
            android:drawablePadding="3dp"

            android:gravity="center"
            android:padding="5dp"
            android:text="@string/tab_menu_battle"
            android:textColor="@drawable/tab_menu_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/linghun"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/tab_menu_bg"
            android:drawablePadding="3dp"

            android:gravity="center"
            android:padding="5dp"
            android:text="@string/tab_menu_linghun"
            android:textColor="@drawable/tab_menu_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/kong"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/tab_menu_bg"
            android:drawablePadding="3dp"

            android:gravity="center"
            android:padding="5dp"
            android:text="@string/tab_menu_kong"
            android:textColor="@drawable/tab_menu_text"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/shu"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/tab_menu_bg"
            android:drawablePadding="3dp"

            android:gravity="center"
            android:padding="5dp"
            android:text="@string/tab_menu_shu"
            android:textColor="@drawable/tab_menu_text"
            android:textSize="16sp"/>
    </LinearLayout>
</RelativeLayout>
